added samples for camel, a simple lock for camel clusters to allow only one instance to run

--- a/JavaSamples/pom.xml
+++ b/JavaSamples/pom.xml
@@ -28,6 +28,8 @@
     <module>spring-boot-web-helloworld</module>
     <module>fatjar</module>
     <module>objectpool</module>
+    <module>refactorpattern</module>
+    <module>cameltest</module>
   </modules>
 
 	<dependencies>
