--- a/JavaSamples/pom.xml
+++ b/JavaSamples/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>mjz</groupId>
@@ -23,14 +24,15 @@
 		<module>java8</module>
 		<module>easybatch</module>
 		<module>guavatest</module>
-    <module>aop</module>
-    <module>annatation</module>
-    <module>spring-boot-web-helloworld</module>
-    <module>fatjar</module>
-    <module>objectpool</module>
-    <module>refactorpattern</module>
-    <module>cameltest</module>
-  </modules>
+		<module>aop</module>
+		<module>annatation</module>
+		<module>spring-boot-web-helloworld</module>
+		<module>fatjar</module>
+		<module>objectpool</module>
+		<module>refactorpattern</module>
+		<module>cameltest</module>
+		<module>formatprint</module>
+	</modules>
 
 	<dependencies>
 		<dependency>
@@ -38,6 +40,17 @@
 			<artifactId>guava</artifactId>
 			<version>21.0</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.6</version>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -54,6 +67,7 @@
 			<artifactId>hamcrest-library</artifactId>
 			<version>1.3</version>
 		</dependency>
+
 
 		<!-- logging -->
 		<dependency>
